--- a/index.html
+++ b/index.html
@@ -3,7 +3,196 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Password Generator</title>
   </head>
-  <body></body>
+  <body>
+    <header class="bg-white">
+      <nav
+        class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8"
+        aria-label="Global"
+      >
+        <img
+          class="h-8 w-auto"
+          src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+          alt="Password Generator"
+        />
+      </nav>
+    </header>
+    <main>
+      <section class="filters">
+        <form>
+          <!--
+  This example requires some changes to your config:
+  
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/forms'),
+    ],
+  }
+  ```
+-->
+
+          <!--
+  This example requires some changes to your config:
+  
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/forms'),
+    ],
+  }
+  ```
+-->
+          <!--
+  This example requires some changes to your config:
+  
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/forms'),
+    ],
+  }
+  ```
+-->
+          <div>
+            <label
+              for="lenght"
+              class="block text-sm font-medium leading-6 text-gray-900"
+              >Password lenght</label
+            >
+            <div class="mt-2">
+              <input
+                type="number"
+                name="lenght"
+                id="lenght"
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                placeholder=" choose number between 8 - 128"
+                required
+              />
+            </div>
+          </div>
+
+          <fieldset>
+            <legend class="text-sm font-medium leading-6 text-gray-900">
+              Filters
+            </legend>
+            <div class="space-y-5">
+              <div class="relative flex items-start">
+                <div class="flex h-6 items-center">
+                  <input
+                    id="comments"
+                    aria-describedby="comments-description"
+                    name="comments"
+                    type="checkbox"
+                    class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
+                  />
+                </div>
+                <div class="ml-3 text-sm leading-6">
+                  <label for="comments" class="font-medium text-gray-900"
+                    >Lowercase letters</label
+                  >
+                </div>
+              </div>
+              <div class="relative flex items-start">
+                <div class="flex h-6 items-center">
+                  <input
+                    id="candidates"
+                    aria-describedby="candidates-description"
+                    name="candidates"
+                    type="checkbox"
+                    class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
+                  />
+                </div>
+                <div class="ml-3 text-sm leading-6">
+                  <label for="candidates" class="font-medium text-gray-900"
+                    >Uppercase letters</label
+                  >
+                </div>
+              </div>
+              <div class="relative flex items-start">
+                <div class="flex h-6 items-center">
+                  <input
+                    id="candidates"
+                    aria-describedby="candidates-description"
+                    name="candidates"
+                    type="checkbox"
+                    class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
+                  />
+                </div>
+                <div class="ml-3 text-sm leading-6">
+                  <label for="candidates" class="font-medium text-gray-900"
+                    >Numbers</label
+                  >
+                </div>
+              </div>
+              <div class="relative flex items-start">
+                <div class="flex h-6 items-center">
+                  <input
+                    id="offers"
+                    aria-describedby="offers-description"
+                    name="offers"
+                    type="checkbox"
+                    class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
+                  />
+                </div>
+                <div class="ml-3 text-sm leading-6">
+                  <label for="offers" class="font-medium text-gray-900"
+                    >Special characters</label
+                  >
+                </div>
+              </div>
+            </div>
+          </fieldset>
+        </form>
+      </section>
+      <section class="password">
+        <div>
+          <div>
+            <label
+              for="password"
+              class="block text-sm font-medium leading-6 text-gray-900"
+              >Your new secure password</label
+            >
+            <div class="mt-2">
+              <input
+                type="text"
+                name="password"
+                id="password"
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+          <span class="isolate inline-flex rounded-md shadow-sm">
+            <button
+              type="button"
+              class="relative inline-flex items-center rounded-l-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-10"
+            >
+              Copy to clipboard
+            </button>
+
+            <button
+              type="button"
+              class="relative -ml-px inline-flex items-center rounded-r-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-10"
+            >
+              Clear
+            </button>
+          </span>
+        </div>
+      </section>
+    </main>
+
+    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  </body>
 </html>
